--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mui/material": "^5.16.0",
     "framer-motion": "^11.2.13",
     "iconify-icon": "^2.1.0",
+    "json-server": "^1.0.0-beta.1",
     "lucide-react": "^0.401.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
